--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "watch": "webpack-dev-server --mode development --open --port 8082 --hot --host 192.168.15.170"
+    "watch": "webpack-dev-server --mode development --open"
   },
   "keywords": [],
   "author": "lawdre@gmail.com",
