--- a/package.json
+++ b/package.json
@@ -15,20 +15,26 @@
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "autoprefixer": "^9.5.0",
     "babel-loader": "^8.0.5",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.11",
     "lozad": "^1.9.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "pug-html-loader": "^1.1.5",
+    "pug-loader": "^2.4.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "sass-loader": "^7.1.0",
     "svg-sprite-loader": "^4.1.3",
     "svgo": "^1.2.0",
